--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,3 +1,5 @@
 /* if we do the dropdown menu for the options we could do a hover and focus with it (.dropbtn:hover, .dropbtn:focus) 
 We would obviously have to also color the button and have it change color on hover including the options inside the drop down 
 and we would need a class for the js for it like .reveal {display:block;}
+ */
+
