--- a/Develop/style.css
+++ b/Develop/style.css
@@ -2,4 +2,9 @@
 We would obviously have to also color the button and have it change color on hover including the options inside the drop down 
 and we would need a class for the js for it like .reveal {display:block;}
  */
-
+body {
+    background-image: url(https://images.unsplash.com/photo-1555243896-c709bfa0b564?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+}
